--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
                   <div class="card-body">
                     <h3 class="card-text text-center" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Album</h3>
                     <p class="card-text text-center">
-                      This website gives-off veiw of Images with captions of a Particular album. 
-                      It has the capacity to accommodate as many pictures a photo album can hold.
+                      This website shows images with caption in a Particular album. 
+                      It has the capacity to accommodate as many pictures a photo album can accommodate.
                     </p>
 
                   </div>
